code cleanups, mostly around collections (#3718)
Signed-off-by: Adrian Cole <adrian@tetrate.io>