@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 The OpenZipkin Authors
+ * Copyright 2015-2024 The OpenZipkin Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
@@ -15,7 +15,7 @@ package zipkin2.server.internal.rabbitmq;
 
 import com.rabbitmq.client.ConnectionFactory;
 import java.net.URI;
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -25,7 +25,7 @@ class ZipkinRabbitMQCollectorPropertiesTest {
 
   @Test void uriProperlyParsedAndIgnoresOtherProperties_whenUriSet() throws Exception {
     properties.setUri(URI.create("amqp://admin:admin@localhost:5678/myv"));
-    properties.setAddresses(Collections.singletonList("will_not^work!"));
+    properties.setAddresses(List.of("will_not^work!"));
     properties.setUsername("bob");
     properties.setPassword("letmein");
     properties.setVirtualHost("drwho");
